--- a/Web/003/index.html
+++ b/Web/003/index.html
@@ -30,11 +30,13 @@
             <div id="text">
                 <div id="code">
                     <span class="say">薇薇</span><br><br>
-                    <span class="say">遇见没有早晚，也没有对错，缘分没有长短，只有深浅。</span><br>
+                    <span class="say">遇见没有早晚，也没有对错</span><br>
+                    <span class="say">缘分没有长短，只有深浅</span><br>
                     <span class="say">我一点都不遗憾没有在最好的时光遇到你</span><br>
-                    <span class="say">因为在遇到你之后 我们最好的时光才开始</span><br>
+                    <span class="say">因为在遇到你之后，我们最好的时光才开始</span><br>
                     <br>
-                    <span class="say">我不知道我们能走多久，但只要你不放手我就不会走</span><br>
+                    <span class="say">我不知道我们能走多久</span><br>
+                    <span class="say">但只要你不放手我就不会走</span><br>
                     <span class="say">我知道遇见你不容易，我不想错过你</span><br>
                     <span class="say">有时候连我自己都羡慕你，明明心是我的</span><br>
                     <span class="say">但心里面装的却是满满都是你</span><br>
