--- a/Web/003/index.html
+++ b/Web/003/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div id="clock-box">
-                <a href="https://sunguoqi.com" target="_blank">菜菜</a> 和 <a href="https://sunguoqi.com"
+                <a href="https://sunguoqi.com" target="_blank"></a> 和 <a href="https://sunguoqi.com"
                     target="_blank">薇薇</a> 在一起的
                 <div id="clock"></div>
             </div>
